...
    <string name="app_name">CMM</string>
    <string name="text_status_started">Aparelho sem número</string>
    <string name="text_status_send">Existe dados para serem enviado</string>
    <string name="text_status_sending">Dados estão sendo enviados</string>
    <string name="text_status_sent">Não existe dados para serens enviados</string>
    <string name="text_title_password">SENHA</string>
    <string name="text_pattern_ok">OK</string>
    <string name="text_pattern_save_update">SALVAR/ATUALIZAR DADOS</string>
    <string name="text_pattern_save">SALVAR</string>
    <string name="text_pattern_cancel">CANCELAR</string>
    <string name="text_password_invalid">SENHA INVÁLIDA!</string>
    <string name="text_failure">FALHA INESPERADA NO APLICATIVO! POR FAVOR ENTRE EM CONTATO COM TI. %1$s</string>
    <string name="text_blocked_access_app">ACESSO NEGADO! POR FAVOR, CONFIGURE O APLICATIVO ANTES DO USO DO MESMO!</string>
...
    <string name="text_title_os">ORDEM DE SERVIÇO</string>
    <string name="text_title_activity">ATIVIDADE</string>
    <string name="text_title_hour_meter">HORÍMETRO</string>
    <string name="text_input_hour_meter_invalid">O HODÔMETRO REGISTRADO %1$s É MENOR QUE O ANTERIOR DE %2$s. DESEJA MANTÊ-LO?</string>
    <string name="text_title_menu">MENU</string>
    <string name="text_title_descr_equip">%1$s</string>
    <string name="text_pattern_finish_header">FINALIZAR BOLETIM</string>
    <string name="text_selection_option_invalid">OPÇÃO SELECIONADO INVÁLIDA! POR FAVOR, ENTRE EM CONTATO COM TI.</string>
    <string name="text_title_stop">PARADA</string>
    <string name="text_placeholder_field">Pesquisa</string>
    <string name="text_header_empty">POR FAVOR! INSIRA OS APONTAMENTOS EM TODOS O(S) BOLETIM(INS)!</string>
    <string name="text_msg_recovery">Recuperando dados da tabela \"%1$s\" do Web Service.</string>
    <string name="text_msg_clean">Limpando a tabela \"%1$s\".</string>
...
    <string name="text_pattern_no">NÃO</string>
    <string name="text_pattern_yes">SIM</string>
    <string name="text_button_according">CONFORME (OK)</string>
    <string name="text_button_analyze">NÃO CONFORME (ANALISAR)</string>
    <string name="text_button_repair">NÃO CONFORME (REPARO)</string>
    <string name="text_title_initial_menu">MENU INICIAL - V %1$s</string>
    <string name="text_item_note">APONTAMENTO</string>
    <string name="text_item_config">CONFIGURAÇÃO</string>
    <string name="text_item_out">SAIR</string>
    <string name="text_title_history">HISTÓRICO</string>
    <string name="text_msg_no_data_history">NÃO CONTÉM APONTAMENTO NO BOLETIM.</string>">
    <string name="text_item_work">ATIVIDADE: %1$s</string>
    <string name="text_item_stop">PARADA: %1$s</string>
    <string name="text_msg_note_mechanic_open">POR FAVOR, FINALIZE O APONTAMENTO DE MANUTENÇÃO PARA INICIAR OUTRO APONTAMENTO.</string>
    <string name="text_button_finish_header">FINALIZAR BOLETIM</string>
...
